--- a/source/index.html
+++ b/source/index.html
@@ -6,6 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Way - путешествия по Европе</title>
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/svg+xml" href="img/favicon/favicon.svg">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+  <link rel="apple-touch-icon" href="img/favicon/apple-touch-icon.png">
+  <link rel="manifest" href="favicon.webmanifest">
   <link rel="preload" href="fonts/montserrat-regular.woff2" as="font" crossorigin="anonymous">
   <link rel="preload" href="fonts/montserrat-semibold.woff2" as="font" crossorigin="anonymous">
   <link rel="preload" href="fonts/montserrat-medium.woff2" as="font" crossorigin="anonymous">
@@ -51,79 +56,84 @@
       <p class="catalog__description">Вы можете выбрать полный тур или частичный, с посещением первых 3 мест</p>
       <ul class="catalog__list">
         <li class="catalog__item">
-          <a href="#greece">
+          <a class="catalog__link" href="#greece">
             <figure class="catalog__figure">
               <picture>
-                <source type="image/webp" media="(max-width: 1024px)"
+                <source type="image/webp" media="(max-width: 1023px)"
                   srcset="img/greece-device.webp, img/greece-device@2x.webp 2x">
                 <source type="image/webp" srcset="img/greece.webp, img/greece@2x.webp 2x">
-                <source media="(max-width: 1024px)" srcset="img/greece-device.jpg, img/greece-device@2x.jpg 2x">
+                <source media="(max-width: 1023px)" srcset="img/greece-device.jpg, img/greece-device@2x.jpg 2x">
                 <img class="catalog__img" src="img/greece.jpg" srcset="img/greece@2x.jpg 2x" width="350" height="430"
                   alt="Монастырь «Метеора» на скале в Греции">
               </picture>
               <figcaption class="catalog__caption">Греция</figcaption>
             </figure>
+            <p class="catalog__mask">Смотреть подробнее</p>
           </a>
         </li>
         <li class="catalog__item">
-          <a href="#albania">
+          <a class="catalog__link" href="#albania">
             <figure class="catalog__figure">
               <picture>
-                <source type="image/webp" media="(max-width: 1024px)"
+                <source type="image/webp" media="(max-width: 1023px)"
                   srcset="img/albania-device.webp, img/albania-device@2x.webp 2x">
                 <source type="image/webp" srcset="img/albania.webp, img/albania@2x.webp 2x">
-                <source media="(max-width: 1024px)" srcset="img/albania-device.jpg, img/albania-device@2x.jpg 2x">
+                <source media="(max-width: 1023px)" srcset="img/albania-device.jpg, img/albania-device@2x.jpg 2x">
                 <img class="catalog__img" src="img/albania.jpg" srcset="img/albania@2x.jpg 2x" width="350" height="430"
                   alt="Пляж курорта Ксамиль в Албании">
               </picture>
               <figcaption class="catalog__caption">Албания</figcaption>
             </figure>
+            <p class="catalog__mask">Смотреть подробнее</p>
           </a>
         </li>
         <li class="catalog__item">
-          <a href="#macedonia">
+          <a class="catalog__link" href="#macedonia">
             <figure class="catalog__figure">
               <picture>
-                <source type="image/webp" media="(max-width: 1024px)"
+                <source type="image/webp" media="(max-width: 1023px)"
                   srcset="img/macedonia-device.webp, img/macedonia-device@2x.webp 2x">
                 <source type="image/webp" srcset="img/macedonia.webp, img/macedonia@2x.webp 2x">
-                <source media="(max-width: 1024px)" srcset="img/macedonia-device.jpg, img/macedonia-device@2x.jpg 2x">
+                <source media="(max-width: 1023px)" srcset="img/macedonia-device.jpg, img/macedonia-device@2x.jpg 2x">
                 <img class="catalog__img" src="img/macedonia.jpg" srcset="img/macedonia@2x.jpg 2x" width="350"
                   height="430" alt="Собор на фоне Охридского озера в Македонии">
               </picture>
               <figcaption class="catalog__caption">Македония</figcaption>
             </figure>
+            <p class="catalog__mask">Смотреть подробнее</p>
           </a>
         </li>
         <li class="catalog__item">
-          <a href="#montenegro">
+          <a class="catalog__link" href="#montenegro">
             <figure class="catalog__figure">
               <picture>
-                <source type="image/webp" media="(max-width: 1024px)"
+                <source type="image/webp" media="(max-width: 1023px)"
                   srcset="img/montenegro-device.webp, img/montenegro-device@2x.webp 2x">
                 <source type="image/webp" srcset="img/montenegro.webp, img/montenegro@2x.webp 2x">
-                <source media="(max-width: 1024px)" srcset="img/montenegro-device.jpg, img/montenegro-device@2x.jpg 2x">
+                <source media="(max-width: 1023px)" srcset="img/montenegro-device.jpg, img/montenegro-device@2x.jpg 2x">
                 <img class="catalog__img" src="img/montenegro.jpg" srcset="img/montenegro@2x.jpg 2x" width="350"
                   height="430" alt="Каньон реки Тара в Черногории">
               </picture>
               <figcaption class="catalog__caption">Черногория</figcaption>
             </figure>
+            <p class="catalog__mask">Смотреть подробнее</p>
           </a>
         </li>
         <li class="catalog__item">
-          <a href="#greece">
+          <a class="catalog__link" href="#croatia">
             <figure class="catalog__figure">
               <picture>
-                <source type="image/webp" media="(max-width: 1024px)"
+                <source type="image/webp" media="(max-width: 1023px)"
                   srcset="img/croatia-device.webp, img/croatia-device@2x.webp 2x">
                 <source type="image/webp" srcset="img/croatia.webp, img/croatia@2x.webp 2x">
-                <source media="(max-width: 1024px)" srcset="img/croatia-device.jpg, img/croatia-device@2x.jpg 2x">
+                <source media="(max-width: 1023px)" srcset="img/croatia-device.jpg, img/croatia-device@2x.jpg 2x">
                 <img class="catalog__img" src="img/croatia.jpg" srcset="img/croatia@2x.jpg 2x" width="350" height="430"
                   alt="Пещера Бередине в Хорватии">
               </picture>
               <figcaption class="catalog__caption">Хорватия</figcaption>
             </figure>
           </a>
+          <p class="catalog__mask">Смотреть подробнее</p>
         </li>
       </ul>
     </section>
@@ -149,14 +159,14 @@
           </div>
           <div class="review">
             <picture>
-              <source type="image/webp" media="(max-width: 768px)"
+              <source type="image/webp" media="(max-width: 767px)"
                 srcset="img/greece-review-mobile.webp, img/greece-review-mobile@2x.webp 2x">
-              <source type="image/webp" media="(max-width: 1024px)"
+              <source type="image/webp" media="(max-width: 1023px)"
                 srcset="img/greece-review-tablet.webp, img/greece-review-tablet@2x.webp 2x">
               <source type="image/webp" srcset="img/greece-review.webp, img/greece-review@2x.webp 2x">
-              <source media="(max-width: 768px)"
+              <source media="(max-width: 767px)"
                 srcset="img/greece-review-mobile.jpg, img/greece-review-mobile@2x.jpg 2x">
-              <source media="(max-width: 1024px)"
+              <source media="(max-width: 1023px)"
                 srcset="img/greece-review-tablet.jpg, img/greece-review-tablet@2x.jpg 2x">
               <img class="review__img" src="img/greece-review.jpg" srcset="img/albania-review@2x.jpg 2x" width="350"
                 height="430" alt="Монастырь «Метеора» на скале в Греции">
@@ -192,14 +202,14 @@
           </div>
           <div class="review">
             <picture>
-              <source type="image/webp" media="(max-width: 768px)"
+              <source type="image/webp" media="(max-width: 767px)"
                 srcset="img/albania-review-mobile.webp, img/albania-review-mobile@2x.webp 2x">
-              <source type="image/webp" media="(max-width: 1024px)"
+              <source type="image/webp" media="(max-width: 1023px)"
                 srcset="img/albania-review-tablet.webp, img/albania-review-tablet@2x.webp 2x">
               <source type="image/webp" srcset="img/albania-review.webp, img/albania-review@2x.webp 2x">
-              <source media="(max-width: 768px)"
+              <source media="(max-width: 767px)"
                 srcset="img/albania-review-mobile.jpg, img/albania-review-mobile@2x.jpg 2x">
-              <source media="(max-width: 1024px)"
+              <source media="(max-width: 1023px)"
                 srcset="img/albania-review-tablet.jpg, img/albania-review-tablet@2x.jpg 2x">
               <img class="review__img" src="img/albania-review.jpg" srcset="img/albania-review@2x.jpg 2x" width="350"
                 height="430" alt="Пляж курорта Ксамиль в Албании">
@@ -232,14 +242,14 @@
           </div>
           <div class="review">
             <picture>
-              <source type="image/webp" media="(max-width: 768px)"
+              <source type="image/webp" media="(max-width: 767px)"
                 srcset="img/macedonia-review-mobile.webp, img/macedonia-review-mobile@2x.webp 2x">
-              <source type="image/webp" media="(max-width: 1024px)"
+              <source type="image/webp" media="(max-width: 1023px)"
                 srcset="img/macedonia-review-tablet.webp, img/macedonia-review-tablet@2x.webp 2x">
               <source type="image/webp" srcset="img/macedonia-review.webp, img/macedonia-review@2x.webp 2x">
-              <source media="(max-width: 768px)"
+              <source media="(max-width: 767px)"
                 srcset="img/macedonia-review-mobile.jpg, img/macedonia-review-mobile@2x.jpg 2x">
-              <source media="(max-width: 1024px)"
+              <source media="(max-width: 1023px)"
                 srcset="img/macedonia-review-tablet.jpg, img/macedonia-review-tablet@2x.jpg 2x">
               <img class="review__img" src="img/macedonia-review.jpg" srcset="img/macedonia-review@2x.jpg 2x"
                 width="350" height="430" alt="Собор на фоне Охридского озера в Македонии">
@@ -273,14 +283,14 @@
           </div>
           <div class="review">
             <picture>
-              <source type="image/webp" media="(max-width: 768px)"
+              <source type="image/webp" media="(max-width: 767px)"
                 srcset="img/montenegro-review-mobile.webp, img/montenegro-review-mobile@2x.webp 2x">
-              <source type="image/webp" media="(max-width: 1024px)"
+              <source type="image/webp" media="(max-width: 1023px)"
                 srcset="img/montenegro-review-tablet.webp, img/montenegro-review-tablet@2x.webp 2x">
               <source type="image/webp" srcset="img/montenegro-review.webp, img/montenegro-review@2x.webp 2x">
-              <source media="(max-width: 768px)"
+              <source media="(max-width: 767px)"
                 srcset="img/montenegro-review-mobile.jpg, img/montenegro-review-mobile@2x.jpg 2x">
-              <source media="(max-width: 1024px)"
+              <source media="(max-width: 1023px)"
                 srcset="img/montenegro-review-tablet.jpg, img/montenegro-review-tablet@2x.jpg 2x">
               <img class="review__img" src="img/montenegro-review.jpg" srcset="img/montenegro-review@2x.jpg 2x"
                 width="350" height="430" alt="Каньон реки Тара в Черногории">
@@ -313,14 +323,14 @@
           </div>
           <div class="review">
             <picture>
-              <source type="image/webp" media="(max-width: 768px)"
+              <source type="image/webp" media="(max-width: 767px)"
                 srcset="img/croatia-review-mobile.webp, img/croatia-review-mobile@2x.webp 2x">
-              <source type="image/webp" media="(max-width: 1024px)"
+              <source type="image/webp" media="(max-width: 1023px)"
                 srcset="img/croatia-review-tablet.webp, img/croatia-review-tablet@2x.webp 2x">
               <source type="image/webp" srcset="img/croatia-review.webp, img/croatia-review@2x.webp 2x">
-              <source media="(max-width: 768px)"
+              <source media="(max-width: 767px)"
                 srcset="img/croatia-review-mobile.jpg, img/croatia-review-mobile@2x.jpg 2x">
-              <source media="(max-width: 1024px)"
+              <source media="(max-width: 1023px)"
                 srcset="img/croatia-review-tablet.jpg, img/croatia-review-tablet@2x.jpg 2x">
               <img class="review__img" src="img/croatia-review.jpg" srcset="img/croatia-review@2x.jpg 2x" width="350"
                 height="430" alt="Пещера Бередине в Хорватии">
@@ -406,17 +416,17 @@
           <h2 class="feedback__title">У Вас остались вопросы?</h2>
           <p class="feedback__text">Оставьте свой номер или e-mail и мы свяжемся с Вами</p>
           <ul class="feedback__list">
-            <li class="feedback__item">
-              <label class="feedback__label" for="phone" aria-label="Телефон"></label>
+            <li class="feedback__item feedback__item--phone">
+              <label class="visually-hidden" for="phone">Введите телефон</label>
               <input class="feedback__input" type="tel" name="tel" id="phone" placeholder="+7 Введите 10 цифр номера"
                 required>
             </li>
             <li class="feedback__item">
-              <label class="feedback__label" for="email" aria-label="Телефон"></label>
+              <label class="visually-hidden" for="email">Введите электронну почту</label>
               <input class="feedback__input" type="email" name="email" id="email" placeholder="E-mail">
             </li>
           </ul>
-          <button type="submit">Отправить</button>
+          <button class="feedback__btn" type="submit">Отправить</button>
         </form>
       </section>
     </section>
