--- a/source/index.html
+++ b/source/index.html
@@ -18,28 +18,26 @@
 </head>
 
 <body class="page__body">
-  <header class="header">
-    <div class="header__top">
-      <img class="header__logo" src="img/logotype.svg" width="57" height="22" alt="Логотип Way">
-      <nav class="main-nav main-nav--closed main-nav--no-js">
-        <ul class="main-nav__list">
-          <li class="main-nav__item">
-            <a class="main-nav__link" href="#place">О путешествии</a>
-          </li>
-          <li class="main-nav__item">
-            <a class="main-nav__link" href="#price">Цены</a>
-          </li>
-        </ul>
-        <button class="main-nav__toggle" type="button" aria-label="Меню"></button>
-      </nav>
-      <a class="header__tel" href="tel:+749978468446">
-        <svg class="header__tel-svg" width="18" height="19">
-          <use xlink:href="img/sprite.svg#icon-phone">
-          </use>
-        </svg>
-        +7 (499) -784-684-46
-      </a>
-    </div>
+  <header class="header container">
+    <img class="header__logo" src="img/logotype.svg" width="57" height="22" alt="Логотип Way">
+    <nav class="main-nav main-nav--closed main-nav--no-js">
+      <button class="main-nav__toggle" type="button" aria-label="Меню"></button>
+      <ul class="main-nav__list">
+        <li class="main-nav__item">
+          <a class="main-nav__link" href="#place">О путешествии</a>
+        </li>
+        <li class="main-nav__item">
+          <a class="main-nav__link" href="#price">Цены</a>
+        </li>
+      </ul>
+    </nav>
+    <a class="header__tel" href="tel:+749978468446">
+      <svg class="header__tel-svg" width="18" height="19">
+        <use xlink:href="img/sprite.svg#icon-phone">
+        </use>
+      </svg>
+      +7 (499) -784-684-46
+    </a>
   </header>
   <main class="page__main">
     <section class="promo">
@@ -539,5 +537,6 @@
     </section>
   </footer>
 </body>
+<script src="js/script.js"></script>
 
 </html>
