--- a/source/index.html
+++ b/source/index.html
@@ -36,7 +36,7 @@
         <use xlink:href="img/sprite.svg#icon-phone">
         </use>
       </svg>
-      +7 (499) -784-684-46
+      +7&nbsp;(499)&nbsp;-784-684-46
     </a>
   </header>
   <main class="page__main">
@@ -379,28 +379,28 @@
           <p class="tariff__lead">Ознакомьтесь с перечнем того, что входит в данный пакет </p>
           <ul class="tariff__description-list">
             <li class="tariff__description-item">
-              <svg class="header__tel-svg" width="14" height="12">
+              <svg class="tariff__description-icon" width="14" height="12">
                 <use xlink:href="img/sprite.svg#icon-check">
                 </use>
               </svg>
               Разработанный маршрут с гидом группы
             </li>
             <li class="tariff__description-item">
-              <svg class="header__tel-svg" width="14" height="12">
+              <svg class="tariff__description-icon" width="14" height="12">
                 <use xlink:href="img/sprite.svg#icon-check">
                 </use>
               </svg>
               Перелет, трансфер и проживание в отелях
             </li>
             <li class="tariff__description-item">
-              <svg class="header__tel-svg" width="14" height="12">
+              <svg class="tariff__description-icon" width="14" height="12">
                 <use xlink:href="img/sprite.svg#icon-check">
                 </use>
               </svg>
               Завтраки, ужины в отелях и ланчи на природе
             </li>
             <li class="tariff__description-item">
-              <svg class="header__tel-svg" width="14" height="12">
+              <svg class="tariff__description-icon" width="14" height="12">
                 <use xlink:href="img/sprite.svg#icon-check">
                 </use>
               </svg>
@@ -416,35 +416,35 @@
           <p class="tariff__lead">Ознакомьтесь с перечнем того, что входит в данный пакет </p>
           <ul class="tariff__description-list">
             <li class="tariff__description-item">
-              <svg class="header__tel-svg" width="14" height="12">
+              <svg class="tariff__description-icon" width="14" height="12">
                 <use xlink:href="img/sprite.svg#icon-check">
                 </use>
               </svg>
               Разработанный маршрут с гидом группы
             </li>
             <li class="tariff__description-item">
-              <svg class="header__tel-svg" width="14" height="12">
+              <svg class="tariff__description-icon" width="14" height="12">
                 <use xlink:href="img/sprite.svg#icon-check">
                 </use>
               </svg>
               Перелет и трансфер
             </li>
             <li class="tariff__description-item">
-              <svg class="header__tel-svg" width="14" height="12">
+              <svg class="tariff__description-icon" width="14" height="12">
                 <use xlink:href="img/sprite.svg#icon-check">
                 </use>
               </svg>
               Проживание в хостелах при отелях
             </li>
             <li class="tariff__description-item">
-              <svg class="header__tel-svg" width="14" height="12">
+              <svg class="tariff__description-icon" width="14" height="12">
                 <use xlink:href="img/sprite.svg#icon-check">
                 </use>
               </svg>
               Только завтраки в отелях
             </li>
             <li class="tariff__description-item">
-              <svg class="header__tel-svg" width="14" height="12">
+              <svg class="tariff__description-icon" width="14" height="12">
                 <use xlink:href="img/sprite.svg#icon-check">
                 </use>
               </svg>
@@ -473,58 +473,52 @@
       </section>
     </section>
   </main>
-  <footer class="page__footer">
+  <footer class="page__footer container">
     <section class="footer-trips">
       <h2 class="footer-trips__title">Следующие путешествия</h2>
-      <ul class="footer-trips__list">
-        <li class="footer-trips__item">
-          <ul class="footer-trips__sub-list">
-            <li class="footer-trips__sub-item">Марсель</li>
-            <li class="footer-trips__sub-item">Ним</li>
-            <li class="footer-trips__sub-item">Монпелье</li>
-            <li class="footer-trips__sub-item">Барселона</li>
-            <li class="footer-trips__sub-item">Пальма</li>
-          </ul>
-        </li>
-        <li class="footer-trips__item">
-          <ul class="footer-trips__sub-list">
-            <li class="footer-trips__sub-item">Сардиния</li>
-            <li class="footer-trips__sub-item">Палермо</li>
-            <li class="footer-trips__sub-item">Катания</li>
-            <li class="footer-trips__sub-item">Неаполь</li>
-            <li class="footer-trips__sub-item">Рим</li>
-          </ul>
-        </li>
-        <li class="footer-trips__item">
-          <ul class="footer-trips__sub-list">
-            <li class="footer-trips__sub-item">Корс</li>
-            <li class="footer-trips__sub-item">Ницца</li>
-            <li class="footer-trips__sub-item">Монако</li>
-            <li class="footer-trips__sub-item">Динь-ле-Бен</li>
-            <li class="footer-trips__sub-item">Гренобль</li>
-          </ul>
-        </li>
-      </ul>
+      <div class="footer-trips__list-wrap">
+        <ul class="footer-trips__list">
+          <li class="footer-trips__item">Марсель</li>
+          <li class="footer-trips__item">Ним</li>
+          <li class="footer-trips__item">Монпелье</li>
+          <li class="footer-trips__item">Барселона</li>
+          <li class="footer-trips__item">Пальма</li>
+        </ul>
+        <ul class="footer-trips__list">
+          <li class="footer-trips__item">Сардиния</li>
+          <li class="footer-trips__item">Палермо</li>
+          <li class="footer-trips__item">Катания</li>
+          <li class="footer-trips__item">Неаполь</li>
+          <li class="footer-trips__item">Рим</li>
+        </ul>
+        <ul class="footer-trips__list">
+          <li class="footer-trips__item">Корс</li>
+          <li class="footer-trips__item">Ницца</li>
+          <li class="footer-trips__item">Монако</li>
+          <li class="footer-trips__item">Динь-ле-Бен</li>
+          <li class="footer-trips__item">Гренобль</li>
+        </ul>
+      </div>
     </section>
     <section class="footer-contact">
       <h2 class="footer-contact__title">Наши контакты</h2>
       <ul class="footer-contact__list">
         <li class="footer-contact__item">
-          <a class="footer-contact__email" href="mailto:puteshestviemechta@gmail.ru">
-            <svg class="footer-contact__tel-svg" width="26" height="20">
-              <use xlink:href="img/sprite.svg#icon-email">
-              </use>
-            </svg>
+          <svg class="footer-contact__icon footer-contact--email" width="26" height="20">
+            <use xlink:href="img/sprite.svg#icon-email">
+            </use>
+          </svg>
+          <a class="footer-contact__link footer-contact__link--email" href="mailto:puteshestviemechta@gmail.ru">
             puteshestviemechta@gmail.ru
           </a>
         </li>
         <li class="footer-contact__item">
-          <a class="footer-contact__tel" href="tel:+749978468446">
-            <svg class="footer-contact__tel-svg" width="18" height="19">
-              <use xlink:href="img/sprite.svg#icon-phone">
-              </use>
-            </svg>
-            +7 (499) -784-684-46
+          <svg class="footer-contact__icon footer-contact__icon--tel" width="18" height="19">
+            <use xlink:href="img/sprite.svg#icon-phone">
+            </use>
+          </svg>
+          <a class="footer-contact__link footer-contact__link--tel" href="tel:+749978468446">
+            +7&nbsp;(499)&nbsp;-784-684-46
           </a>
         </li>
       </ul>
