--- a/source/index.html
+++ b/source/index.html
@@ -20,7 +20,7 @@
 <body class="page__body">
   <header class="header container">
     <img class="header__logo" src="img/logotype.svg" width="57" height="22" alt="Логотип Way">
-    <nav class="main-nav main-nav--closed main-nav--no-js">
+    <nav class="main-nav main-nav--closed main-nav--nojs">
       <button class="main-nav__toggle" type="button" aria-label="Меню"></button>
       <ul class="main-nav__list">
         <li class="main-nav__item">
@@ -41,12 +41,12 @@
   </header>
   <main class="page__main">
     <section class="promo">
-      <div class="promo__content">
+      <div class="promo__content container">
         <h1 class="promo__title">Путешествие по Европе</h1>
         <p class="promo__text">В этом туре вы откроете для себя Европу в новом свете. Вас ждет: море, горы, а также
           потрясающая красота
           природы.</p>
-        <a href="#tours">Смотреть тур</a>
+        <a class="promo__btn button" href="#tours">Смотреть тур</a>
       </div>
     </section>
     <section class="catalog">
