--- a/source/index.html
+++ b/source/index.html
@@ -42,16 +42,18 @@
   <main class="page__main">
     <section class="promo">
       <div class="promo__content container">
-        <h1 class="promo__title">Путешествие по Европе</h1>
+        <h1 class="promo__title title">Путешествие по Европе</h1>
         <p class="promo__text">В этом туре вы откроете для себя Европу в новом свете. Вас ждет: море, горы, а также
           потрясающая красота
           природы.</p>
         <a class="promo__btn button" href="#tours">Смотреть тур</a>
       </div>
     </section>
-    <section class="catalog">
-      <h2 class="catalog__title">Места посещения</h2>
-      <p class="catalog__description">Вы можете выбрать полный тур или частичный, с посещением первых 3 мест</p>
+    <section class="catalog container">
+      <div class="catalog_header">
+        <h2 class="catalog__title title">Места посещения</h2>
+        <p class="catalog__description">Вы можете выбрать полный тур или частичный, с посещением первых 3 мест</p>
+      </div>
       <ul class="catalog__list">
         <li class="catalog__item">
           <a class="catalog__link" href="#greece">
@@ -135,8 +137,8 @@
               </picture>
               <figcaption class="catalog__caption">Хорватия</figcaption>
             </figure>
-          </a>
           <p class="catalog__mask">Смотреть подробнее</p>
+        </a>
         </li>
       </ul>
     </section>
@@ -152,7 +154,7 @@
       <ul class="places__list">
         <li class="places__item" id="greece">
           <div class="description">
-            <h3 class="description__title">Греция</h3>
+            <h3 class="description__title title">Греция</h3>
             <p class="description__text">На севере Греции находится один из крупнейших комплексов монастырей,
               расположенных на вершинах скал. Название его «Метеора» буквально переводится как «висящие в воздухе». Этот
               монастырь основная цель нашего путешествия в Греции. После покарения скал из песчанника и обломочной
@@ -194,7 +196,7 @@
         </li>
         <li class="places__item" id="albania">
           <div class="description">
-            <h3 class="description__title">Албания</h3>
+            <h3 class="description__title title">Албания</h3>
             <p class="description__text">В Албании мы посетим Курорт Ксамиль. Этот курорт поразит вас чистейшей водой и
               удивительным пляжем. Вначале кажется, что на пляже вас встречает обычный, правда невероятно белоснежный и
               слишком крупный песок. Однако, присмотревшись, можно понять, что это не песок, а камни, перетёртые до
@@ -233,7 +235,7 @@
         </li>
         <li class="places__item" id="macedonia">
           <div class="description">
-            <h3 class="description__title">Македония</h3>
+            <h3 class="description__title title">Македония</h3>
             <p class="description__text">В Македонии нашей целью будет посетить Палаошник, который расположился в
               удивительно красивой лесистой местности возле Охридского озера и Самуиловой твердыни. А также мы заберемся
               на вершину горы Татичев Камен где находится археологический памятник Кокино в длину около 100 метров.</p>
@@ -274,7 +276,7 @@
         </li>
         <li class="places__item" id="montenegro">
           <div class="description">
-            <h3 class="description__title">Черногория</h3>
+            <h3 class="description__title title">Черногория</h3>
             <p class="description__text">Черногория удивит нас самым большим в Европе каньоном реки Тара, который в
               некоторых местах высотой берегов доходит до 1300 метров, а шириной не превышает трех. При этом длина
               каньона составляет 80 км. </p>
@@ -314,7 +316,7 @@
         </li>
         <li class="places__item" id="croatia">
           <div class="description">
-            <h3 class="description__title">Хорватия</h3>
+            <h3 class="description__title title">Хорватия</h3>
             <p class="description__text">В Хорватии мы посетим необычайную пещеру названную Бередине. Ее подземный мир
               увлечет вас на 80-ти метровую глубину через 5 освещенных залов, украшенных удивительными нерукотворными
               скульптурами — сталактитами и сталагмитами — формировавшимися тысячи и тысячи лет. </p>
@@ -355,7 +357,7 @@
     </section>
     <section class="prices" id="price">
       <div class="prices__wrap">
-        <h2 class="prices__title">Цены</h2>
+        <h2 class="prices__titl title">Цены</h2>
         <p class="prices__text">Специально для Вас мы разработали 2 пакета цен с разными условиями, отталкиваясь от
           Ваших потребностей и
           возможностей. Выберите для себя лучший вариант отпуска и отдохните на все 100%! </p>
@@ -522,7 +524,7 @@
         помогают поддерживать корпоративный дух, а также являются оличным времяпрепровождением</p>
     </section>
   </footer>
+  <script src="js/script.js"></script>
 </body>
-<script src="js/script.js"></script>
 
 </html>
