--- a/source/index.html
+++ b/source/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="page">
+<html lang="ru" class="page">
 
 <head>
   <meta charset="UTF-8">
@@ -202,7 +202,7 @@
                     <picture>
                       <source type="image/webp" srcset="img/review/golitsina.webp, img/review/golitsina@2x.webp 2x">
                       <img class="review__photo" src="img/review/golitsina.jpg" srcset="img/review/golitsina@2x.jpg 2x"
-                        width="38" height="38" alt="фотография Влады Голициной">
+                        width="38" height="38" alt="Фотография Влады Голициной">
                     </picture>
                     Влада Голицина
                   </cite>
@@ -247,7 +247,7 @@
                     <picture>
                       <source type="image/webp" srcset="img/review/marishka.webp, img/review/marishka@2x.webp 2x">
                       <img class="review__photo" src="img/review/marishka.jpg" srcset="img/review/marishka@2x.jpg 2x"
-                        width="38" height="38" alt="фотография Маришки">
+                        width="38" height="38" alt="Фотография Маришки">
                     </picture>
                     Маришка
                   </cite>
@@ -292,7 +292,7 @@
                     <picture>
                       <source type="image/webp" srcset="img/review/kuzmin.webp, img/review/kuzmin@2x.webp 2x">
                       <img class="review__photo" src="img/review/kuzmin.jpg" srcset="img/review/kuzmin@2x.jpg 2x"
-                        width="38" height="38" alt="фотография Михаила Кузьмина">
+                        width="38" height="38" alt="Фотография Михаила Кузьмина">
                     </picture>
                     Михаил Кузьмин
                   </cite>
@@ -334,7 +334,7 @@
                     <picture>
                       <source type="image/webp" srcset="img/review/mey.webp, img/review/mey@2x.webp 2x">
                       <img class="review__photo" src="img/review/mey.jpg" srcset="img/review/mey@2x.jpg 2x" width="38"
-                        height="38" alt="фотография Анастасии Мей">
+                        height="38" alt="Фотография Анастасии Мей">
                     </picture>
                     Анастасия Мей
                   </cite>
@@ -377,7 +377,7 @@
                     <picture>
                       <source type="image/webp" srcset="img/review/mulitsin.webp, img/review/mulitsin@2x.webp 2x">
                       <img class="review__photo" src="img/review/mulitsin.jpg" srcset="img/review/mulitsin@2x.jpg 2x"
-                        width="38" height="38" alt="фотография Владимира Мулицина">
+                        width="38" height="38" alt="Фотография Владимира Мулицина">
                     </picture>
                     Владимир Мулицин
                   </cite>
@@ -388,124 +388,126 @@
         </ul>
       </div>
     </section>
-    <section class="prices" id="price">
-      <div class="prices__wrap">
-        <h2 class="prices__titl title">Цены</h2>
+    <section class="prices container" id="price">
+      <div class="prices__offer">
+        <h2 class="prices__title title">Цены</h2>
         <p class="prices__text">Специально для Вас мы разработали 2 пакета цен с разными условиями, отталкиваясь от
           Ваших потребностей и
           возможностей. Выберите для себя лучший вариант отпуска и отдохните на все 100%! </p>
         <div class="prices__contact">
-          <p class="prices__contact-text">Свяжитесь с нами</p>
+          <p class="prices__contact-title">Свяжитесь с нами</p>
           <a class="prices__contact-tel" href="tel:+749978468446">
-            <svg class="prices__contact-svg" width="18" height="19">
-              <use xlink:href="img/sprite.svg#icon-phone">
-              </use>
-            </svg>
-            +7 (499) -784-684-46
+            +7&nbsp;(499)&nbsp;-784-684-46
           </a>
         </div>
       </div>
       <ul class="tariff">
+        <li class="tariff__item tariff__item--fix">
+          <div class="tariff__header">
+            <div class="tariff__title">
+              <h3 class="tariff__name">Комплексный</h3>
+              <span class="tariff__rate">$1999</span>
+            </div>
+            <p class="tariff__text">Ознакомьтесь с перечнем того, что входит в данный пакет </p>
+          </div>
+          <ul class="tariff__description-list">
+            <li class="tariff__description-item">
+              <svg class="tariff__description-icon" width="14" height="12">
+                <use xlink:href="img/sprite.svg#icon-check">
+                </use>
+              </svg>
+              <p class="tariff__description-text">Разработанный маршрут с гидом группы</p>
+            </li>
+            <li class="tariff__description-item">
+              <svg class="tariff__description-icon" width="14" height="12">
+                <use xlink:href="img/sprite.svg#icon-check">
+                </use>
+              </svg>
+              <p class="tariff__description-text">Перелет, трансфер и проживание в отелях</p>
+            </li>
+            <li class="tariff__description-item">
+              <svg class="tariff__description-icon" width="14" height="12">
+                <use xlink:href="img/sprite.svg#icon-check">
+                </use>
+              </svg>
+              <p class="tariff__description-text">Завтраки, ужины в отелях и ланчи на природе</p>
+            </li>
+            <li class="tariff__description-item">
+              <svg class="tariff__description-icon" width="14" height="12">
+                <use xlink:href="img/sprite.svg#icon-check">
+                </use>
+              </svg>
+              <p class="tariff__description-text">Экскурсии по удивительно красивым местам Европы</p>
+            </li>
+          </ul>
+          <a class="tariff__btn button" href="#">Купить тур сейчас</a>
+        </li>
         <li class="tariff__item">
           <div class="tariff__header">
-            <h3 class="tariff__name">Комплексный</h3>
-            <span class="tariff__rate">$1999</span>
+            <div class="tariff__title">
+              <h3 class="tariff__name">Экономный</h3>
+              <span class="tariff__rate">$1399</span>
+            </div>
+            <p class="tariff__text">Ознакомьтесь с перечнем того, что входит в данный пакет </p>
           </div>
-          <p class="tariff__lead">Ознакомьтесь с перечнем того, что входит в данный пакет </p>
           <ul class="tariff__description-list">
             <li class="tariff__description-item">
               <svg class="tariff__description-icon" width="14" height="12">
                 <use xlink:href="img/sprite.svg#icon-check">
                 </use>
               </svg>
-              Разработанный маршрут с гидом группы
+              <p class="tariff__description-text">Разработанный маршрут с гидом группы</p>
             </li>
             <li class="tariff__description-item">
               <svg class="tariff__description-icon" width="14" height="12">
                 <use xlink:href="img/sprite.svg#icon-check">
                 </use>
               </svg>
-              Перелет, трансфер и проживание в отелях
+              <p class="tariff__description-text">Перелет и трансфер</p>
             </li>
             <li class="tariff__description-item">
               <svg class="tariff__description-icon" width="14" height="12">
                 <use xlink:href="img/sprite.svg#icon-check">
                 </use>
               </svg>
-              Завтраки, ужины в отелях и ланчи на природе
+              <p class="tariff__description-text">Проживание в хостелах при отелях</p>
             </li>
             <li class="tariff__description-item">
               <svg class="tariff__description-icon" width="14" height="12">
                 <use xlink:href="img/sprite.svg#icon-check">
                 </use>
               </svg>
-              Экскурсии по удивительно красивым местам Европы
+              <p class="tariff__description-text">Только завтраки в отелях</p>
+            </li>
+            <li class="tariff__description-item">
+              <svg class="tariff__description-icon" width="14" height="12">
+                <use xlink:href="img/sprite.svg#icon-check">
+                </use>
+              </svg>
+              <p class="tariff__description-text">Экскурсии по удивительно красивым местам Европы</p>
             </li>
           </ul>
-        </li>
-        <li class="tariff__item">
-          <div class="tariff__title">
-            <h3 class="tariff__name">Экономный</h3>
-            <span class="tariff__rate">$1399</span>
-          </div>
-          <p class="tariff__lead">Ознакомьтесь с перечнем того, что входит в данный пакет </p>
-          <ul class="tariff__description-list">
-            <li class="tariff__description-item">
-              <svg class="tariff__description-icon" width="14" height="12">
-                <use xlink:href="img/sprite.svg#icon-check">
-                </use>
-              </svg>
-              Разработанный маршрут с гидом группы
-            </li>
-            <li class="tariff__description-item">
-              <svg class="tariff__description-icon" width="14" height="12">
-                <use xlink:href="img/sprite.svg#icon-check">
-                </use>
-              </svg>
-              Перелет и трансфер
-            </li>
-            <li class="tariff__description-item">
-              <svg class="tariff__description-icon" width="14" height="12">
-                <use xlink:href="img/sprite.svg#icon-check">
-                </use>
-              </svg>
-              Проживание в хостелах при отелях
-            </li>
-            <li class="tariff__description-item">
-              <svg class="tariff__description-icon" width="14" height="12">
-                <use xlink:href="img/sprite.svg#icon-check">
-                </use>
-              </svg>
-              Только завтраки в отелях
-            </li>
-            <li class="tariff__description-item">
-              <svg class="tariff__description-icon" width="14" height="12">
-                <use xlink:href="img/sprite.svg#icon-check">
-                </use>
-              </svg>
-              Экскурсии по удивительно красивым местам Европы
-            </li>
-          </ul>
+          <a class="tariff__btn button" href="#">Купить тур сейчас</a>
         </li>
       </ul>
-      <section class="feedback">
-        <form class="feedback-form" action="https://echo.htmlacademy.ru" method="POST">
-          <h2 class="feedback__title">У Вас остались вопросы?</h2>
-          <p class="feedback__text">Оставьте свой номер или e-mail и мы свяжемся с Вами</p>
-          <ul class="feedback__list">
-            <li class="feedback__item feedback__item--phone">
-              <label class="visually-hidden" for="phone">Введите телефон</label>
-              <input class="feedback__input" type="tel" name="tel" id="phone" placeholder="+7 Введите 10 цифр номера"
-                required>
-            </li>
-            <li class="feedback__item">
-              <label class="visually-hidden" for="email">Введите электронну почту</label>
-              <input class="feedback__input" type="email" name="email" id="email" placeholder="E-mail">
-            </li>
-          </ul>
-          <button class="feedback__btn" type="submit">Отправить</button>
-        </form>
-      </section>
+    </section>
+    <section class="feedback">
+      <form class="feedback-form" action="https://echo.htmlacademy.ru" method="POST">
+        <h2 class="feedback__title">У Вас остались вопросы?</h2>
+        <p class="feedback__text">Оставьте свой номер или e-mail и мы свяжемся с Вами</p>
+        <ul class="feedback__list">
+          <li class="feedback__item feedback__item--phone">
+            <label class="visually-hidden" for="phone">Введите телефон</label>
+            <input class="feedback__input" type="tel" name="tel" id="phone" placeholder="+7 Введите 10 цифр номера"
+              required>
+          </li>
+          <li class="feedback__item">
+            <label class="visually-hidden" for="email">Введите электронну почту</label>
+            <input class="feedback__input" type="email" name="email" id="email" placeholder="E-mail">
+          </li>
+        </ul>
+        <button class="feedback__btn" type="submit">Отправить</button>
+      </form>
     </section>
   </main>
   <footer class="page__footer container">
